# mycitadel-node

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config_spec.toml  license_header.txt
libmycitadel/: Cargo.toml  build.rs  cbindgen.toml  libmycitadel.h
libmycitadel/src/: bech32.rs  client.rs  error.rs  external.rs  helpers.rs  lib.rs  signer.rs
libmycitadel/src/capi/: bech32.rs  descriptor.rs  mod.rs  rpc.rs  signer.rs  types.rs  util.rs
shell/: _mycitadel  _mycitadel-cli  _mycitadel-cli.ps1  _mycitadel.ps1  _mycitadeld  _mycitadeld.ps1  mycitadel-cli.bash  mycitadeld.bash
src/: config.rs  daemon.rs  error.rs  lib.rs  opts.rs
src/cache/: driver.rs  error.rs  mod.rs
src/cache/file/: driver.rs  internal.rs  mod.rs  model.rs
src/chainapi/: driver.rs  electrum.rs  mod.rs
src/chainwatch/: mod.rs
src/cli/: command.rs  mod.rs  opts.rs  output.rs  util.rs
src/client/: client.rs  config.rs  mod.rs
src/daemon/: config.rs  mod.rs  opts.rs  runtime.rs
src/data/: mod.rs  signer.rs  wallet.rs
src/embedded/: mod.rs  opts.rs
src/model/: address.rs  citadel.rs  contract.rs  identity.rs  ids.rs  mod.rs  operation.rs  policy.rs  state.rs  util.rs  utxo.rs
src/mycitadel/: mod.rs  opts.rs
src/rpc/: client.rs  message.rs  mod.rs  reply.rs  request.rs
src/server/: config.rs  mod.rs  opts.rs  runtime.rs
src/storage/: driver.rs  file.rs  file_driver.rs  mod.rs  storage.rs
