[package]
name = "mycitadel"
description = "Node operating MyCitadel wallet"
version = "0.1.0-rc"
license = "AGPL-3.0-only"
authors = ["Dr. Maxim Orlovsky <orlovsky@mycitadel.io>"]
keywords = ["bitcoin", "rgb", "wallet", "lightning"]
edition = "2018"
readme = "README.md"
build = "build.rs"
exclude = [".github", "Dockerfile", "/shell"]

[[bin]]
name = "mycitadel"

[[bin]]
name = "mycitadeld"

[[bin]]
name = "mycitadel-cli"

[dependencies]
# LNP/BP crates
amplify = { version = "3", features = ["serde"] }
amplify_derive = "2.4.4"
slip132 = { version = "0.3.2", features = ["serde"] }
strict_encoding = { version = "1.0.7", features = ["chrono", "crypto", "miniscript", "derive"] }
descriptor-wallet = { version = "0.4", features = ["serde"] }
lnpbp = { version = "0.4", features = ["serde"] }
lnpbp-invoice = { version = "0.1", features = ["serde", "rgb"] }
lnp-core = { version = "0.3.1", features = ["serde"] }
rgb-core = { version = "0.4.2", features = ["serde"] }
rgb20 = { version = "0.4", features = ["serde"] }
rgb_node = { version = "0.4", default-features = false, features = ["fungibles", "serde", "server", "electrum-client"] }
citadel = { git = "https://github.com/mycitadel/citadel-runtime" }
internet2 = "0.3.10"
microservices = { version = "0.3.10", default-features = false }
# Bitcoin
bitcoin = { version = "0.26", features = ["use-serde"] }
miniscript = { version = "5", features = ["use-serde"] }
# Rust language
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
# Serialization & parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
toml = "0.5"
bech32 = "0.7"
base64 = "0.12"
# Congig & logging
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
env_logger = "0.7"
clap = "3.0.0-beta.2"
settings = { version = "0.10", package = "config" }
configure_me = "0.4"
dotenv = "0.15"
colored = "2"
shellexpand = "2"

[build-dependencies]
amplify = "3"
amplify_derive = "2.4.2"
descriptor-wallet = "0.4"
lnpbp = "0.4"
lnpbp-invoice = { version = "0.1", features = ["serde", "rgb"] }
bitcoin = "0.26"
rgb-core = { version = "0.4.2", features = ["serde"] }
citadel = { git = "https://github.com/mycitadel/citadel-runtime" }
internet2 = "0.3.10"
microservices = { version = "0.3.10", default-features = false }
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
shellexpand = "2"
configure_me_codegen = "0.4"
serde = { version = "1", features = ["derive"] }
colored = "2"

[package.metadata.configure_me]
spec = "config_spec.toml"
