[package]
name = "libmycitadel"
version = "0.1.0-alpha"
description = "C-language bindings for MyCitadel"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
license = "AGPL-3.0-only"
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["staticlib"]
name = "mycitadel"

[build-dependencies]
cbindgen = "0.16"
openssl = { version = "^0.10", features = ["vendored"] }

[dependencies]
amplify = "3"
amplify_derive = "2.4"
mycitadel = { path = "..", features = [ "node", "client" ] }
# slip132 = "0.3.2"
# strict_encoding = { version = "1.0.7", features = ["chrono", "crypto", "miniscript", "derive"] }
# descriptor-wallet = { git = "https://github.com/LNP-BP/descriptor-wallet" }
lnpbp = { git = "https://github.com/LNP-BP/rust-lnpbp" }
# lnp-core = { git = "https://github.com/LNP-BP/lnp-core" }
rgb-core = { git = "https://github.com/rgb-org/rgb-core" }
rgb20 = { git = "https://github.com/rgb-org/rgb-core" }
# rgb_node = { git = "https://github.com/rgb-org/rgb-node", default-features = false, features = ["fungibles"] }
internet2 = { git = "https://github.com/internet2-org/rust-internet2" }
# microservices = { git = "https://github.com/internet2-org/rust-internet2", default-features = false }
bech32 = "0.7"
bitcoin = "0.26"

log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.5"
serde_with_macros = "~1.2.0" # Fix for the problem in 1.3.0
serde_json = "1"

[target.'cfg(target_os="android")'.dependencies]
android_logger = "~0.8.6"

[target.'cfg(not(target_os="android"))'.dependencies]
env_logger = "~0.7.1"

[target.'cfg(any(target_os="android", target_os="ios"))'.dependencies.zmq]
version = "~0.9.2"
features = ["vendored"]

[target.'cfg(any(target_os="android", target_os="ios"))'.dependencies.libsqlite3-sys]
version = "~0.18.0"
features = ["bundled"]
